syntax = "proto3";

package sdn;
option go_package = "sdn/proto";

// Connection Manager Service
service ConnectionManager {
  rpc SendFlowMod (FlowModRequest) returns (FlowModResponse) {}
}

service PacketHandler {
  rpc HandlePacketIn (PacketInRequest) returns (PacketInResponse);
}

// Flow Operation Service
service FlowOperation {
  rpc AddFlow (FlowAddRequest) returns (FlowAddResponse) {}
}

// Flow Add Messages
message FlowAddRequest {
  uint64 switch_id = 1;
  uint32 in_port = 2;
  string src = 3;
  string dst = 4;
  uint32 out_port = 5;
  uint32 priority = 6;
  uint32 hard_timeout = 7;
  uint32 idle_timeout = 8;
  uint32 buffer_id = 9;
  uint32 table_id = 10;
  uint32 flags = 11;
  uint64 cookie = 12;
  uint64 cookie_mask = 13;
}

message FlowAddResponse {
  bool success = 1;
  string message = 2;
}

// Flow Mod Messages
message FlowModRequest {
  bytes data = 1;
  uint32 command = 2;
  uint32 flags = 3;
  uint32 table_id = 4;
  repeated Instruction instructions = 5;
}

message FlowModResponse {
  bool success = 1;
  string message = 2;
  uint32 error_code = 3;
}

// Match Field Messages
message MatchField {
  uint32 class = 1;
  uint32 field = 2;
  bytes value = 3;
  bytes mask = 4;
}

// Action Messages
message Action {
  uint32 type = 1;
  uint32 port = 2;
  uint32 max_len = 3;
  bytes data = 4;
}

// Instruction Messages
message Instruction {
  uint32 type = 1;         // Instruction type
  repeated Action actions = 2;  // For apply_actions
  bytes data = 3;          // Additional instruction data
}


message PacketInRequest {
  uint64 switch_id = 1;
  uint32 buffer_id = 2;
  uint32 length = 3;
  uint32 reason = 4;
  uint32 table_id = 5;
  uint64 cookie = 6;
  repeated MatchField match_fields = 7;
  bytes data = 8;
  uint32 total_len = 9;
  uint32 in_port = 10;
  uint32 in_phy_port = 11;
}


message PacketInResponse {
  bool success = 1;
  string message = 2;
  uint32 error_code = 3;
}